[workspace]
members = ["cli"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
name = "diem"
version = "0.1.0"
edition = "2021"
authors = ["Erwann Lagouche <21955960+AirOne01@users.noreply.github.com>"]
description = "Simple package manager"
repository = "https://github.com/airone01/diem"
homepage = "https://github.com/airone01/diem"
license = "MIT"
license-file = "LICENSE"
readme = "/.github/README.md"
keywords = ["package-manager", "cli", "rust"]

[workspace.dependencies]
clap = "4"
clap_complete = "4"
tokio = "1"
semver = "1"
serde = "1"
serde_json = "1"
confy = "0"
anyhow = "1"
bytes = "1"
reqwest = "0"
thiserror = "2"
indicatif = "0"
