[package]
name = "diem"
version.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env", "color"] }
clap_complete.workspace = true
tokio = { workspace = true, features = ["full"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
confy.workspace = true
anyhow.workspace = true
bytes.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
indicatif.workspace = true
flate2.workspace = true
zip.workspace = true
tar.workspace = true
sha2.workspace = true
directories.workspace = true
futures-util.workspace = true
