[package]
name = "diem"
version.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env", "color"] }
clap_complete.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["fs"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
confy.workspace = true
anyhow.workspace = true
bytes.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
indicatif = { workspace = true, features = ["unicode-width"] }
flate2.workspace = true
zip.workspace = true
tar.workspace = true
sha2.workspace = true
directories.workspace = true
futures-util.workspace = true
toml.workspace = true
colored.workspace = true
cli-table.workspace = true

[dev-dependencies]
tempfile = "3"
